<resources>
    <string name="app_name">Hexon</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="message">Message</string>
    <string name="todo">TODO</string>
    <string name="verify_your_phone_number">Verify your Phone Number</string>

    <string name="phone_login_verification_acknowledgement">Hexon Messenger will send an OTP through SMS to verify your phone number. Carrier SMS charges may apply</string>
    <string name="phone_login_choose_country">Choose your Country</string>
    <string name="phone_login_india">India</string>
    <string name="phone">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="auto_otp_switch">Auto OTP Detection Disabled</string>

    <item name="dialog_editext" type="id" />
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_tab_test">TabTest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabed_">Tabed_Activity</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_profile">Profile</string>
    <string name="title_group">Groups</string>
    <string name="title_feeds">Feeds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message_here">Type Message Here ..</string>
    <string name="auto_otp_detection">Auto OTP Detection</string>
    <string name="auto_otp_detection_disabled">Auto OTP Detection Disabled</string>
    <string name="favourite">Favourite</string>
    <string name="fashion">Fashion</string>
    <string name="book">Book</string>
    <string name="groups">Groups</string>


</resources>
