<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/idNavFeeds"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_feeds" />
    <item
        android:id="@+id/idNavContacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/idNavGroups"
        android:icon="@drawable/ic_groups"
        android:title="@string/title_group" />
    <item
        android:id="@+id/idNavPerson"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/idNavFavourites"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite" />



</menu>